fixed file heiarchy

--- a/outscraper-review-data/clean_data_listing_review_30000.ipynb
+++ b/outscraper-review-data/clean_data_listing_review_30000.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
    "source": [
     "# import csv and create a dataframe\n",
     "\n",
-    "reviews_data = pd.read_csv('../Resources/listing-review-import-30000reviews.csv')\n",
+    "reviews_data = pd.read_csv('./Resources/listing-review-import-30000reviews.csv')\n",
     "\n",
     "reviews_df0 = pd.DataFrame(reviews_data)\n",
     "\n",
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,12 +309,12 @@
     "       'owner_answer', 'owner_answer_timestamp',\n",
     "       'owner_answer_timestamp_datetime_utc', 'review_likes',\n",
     "       'reviews_id'], axis=1, inplace=True)\n",
-    "reviews_df = reviews_df"
+    "reviews_df = reviews_df0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +644,7 @@
        "[30476 rows x 12 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
